# myanti

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/forchan/ndkanti/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/anti/antiCapture/: antiCapture.cpp  antiCapture.h
app/src/main/cpp/base/call/: Method.cpp  Method.h
app/src/main/cpp/base/env/: Env.cpp  Env.h
app/src/main/cpp/include/: global.cpp  global.h  include.cpp  include.h
app/src/main/cpp/tools/md5/: MD5.cpp  MD5.h
app/src/main/java/com/forchan/ndkanti/: MainActivity.java
app/src/main/java/com/forchan/ndkanti/tools/: java2ndk.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/forchan/ndkanti/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
